Created tests for the BookSearchForm and the InventoryForm